--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -27,7 +27,7 @@
     <div class="box-options">
       <button id="newCard" class="button" (click)="showFormToAddNewCard()">Agregar una nueva</button>
       <button id="yes" class="button" (click)="showFormSecurityCode()">Si</button>
-      <button class="button" (click)="navegarInicio('inicio')">Cancelar compra</button>
+      <button class="button cancel" (click)="navegarInicio('inicio')">Cancelar compra</button>
       <button class="button margen-extra" (click)="pagarEnEfectivo()">Pagar en efectivo</button>
     </div>
   </div>
