--- a/Films/src/app/app.component.css
+++ b/Films/src/app/app.component.css
@@ -10,6 +10,7 @@ html, body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    background-color: #f0f0f0;
 }
 
 /* Ajusta el footer para que esté al final y ocupe el ancho completo */
