--- a/Films/src/app/components/show-users/show-users.component.css
+++ b/Films/src/app/components/show-users/show-users.component.css
@@ -29,7 +29,7 @@
 .content-user{
     display: flex;
     justify-content: center;
-    align-items:start;
+    align-items:flex-start;
     margin-block: 0.5rem;
 }
 
