feat: agregue que las peliculas que ya tiene en favoritos tengan la estrella pintada al iniciar sesion en el menu principal.

--- a/Films/src/app/components/inicio-aux/inicio-aux.component.css
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.css
@@ -93,6 +93,14 @@
     color: gold; /* Cambia el color de la estrella al pasar el mouse */
 }
 
+.button-star {
+    color: gray;
+  }
+  
+.button-star.filled {
+    color: gold;
+}
+
 .image{
     height: 350px;
     width: 215px;
