feat: agregue la funcionalidad de que la estrella aparezca pintada si esta en su lista de favoritos en ofertas y categorias

--- a/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
+++ b/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
@@ -6,8 +6,11 @@
     <div *ngFor="let group of getMovieGroups(filteredFilms)" class="box-group-films">
       <div *ngFor="let film of group" class="recuadroCelda film">  
         <div class="box-star">
-          <button id = "buttonStar" (click)="agregarALaListaDeFavoritos(film)" class = "button-star">
-            ☆
+          <button 
+            (click)="toggleFavourite(film)" 
+            class="button-star"
+          >
+            {{ isFavourite(film) ? '★' : '☆' }}
           </button>
         </div>
 
