--- a/Films/src/app/components/show-users/show-users.component.html
+++ b/Films/src/app/components/show-users/show-users.component.html
@@ -3,6 +3,10 @@
         <h4 class="title"> LISTA DE USUARIOS </h4>
     </div> 
 
+    <div class="content-user" *ngIf="users.length === 0">
+        <h5>No hay usuarios aun...</h5>
+    </div>  
+
     <div class="content-user" *ngFor="let user of users">
         <div class="box">
             <div class="info-user">
