--- a/Films/src/app/components/biblioteca/biblioteca.component.html
+++ b/Films/src/app/components/biblioteca/biblioteca.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div *ngIf = "isAdmin" class="box-title">
-  <h3 class="title">BIBLIOTECA DEL USUARIO</h3>
+  <h3 class="title">BIBLIOTECA DE {{usuarioActual?.firstName?.toUpperCase()}} {{usuarioActual?.lastName?.toUpperCase()}} </h3>
 </div>
 
 <section *ngIf="movieLibrary.length > 0" class="box">
