fix: solucione error que logueaba al admin antes de ingresar el codigo, y al actualizar la pagina tenia un carrit, saque de la vista el boton de favoritos para no logueados y admin. feat: deuda en fase de prueba. biblioteca.component, inicio-aux.component, login.component, navbar.component, perfil.component, deuda.service, user.service, auth.guard.ts

--- a/Films/src/app/components/biblioteca/biblioteca.component.html
+++ b/Films/src/app/components/biblioteca/biblioteca.component.html
@@ -33,16 +33,17 @@
   </div>
 </section>
 
-<!-- <div *ngIf="!bibliotecaVacia">
+<div *ngIf="!bibliotecaVacia">
   <div>Deuda: 
     <div *ngIf = "deuda == 0">
       ¡No posee deuda!
     </div>
     <div *ngIf = "deuda != 0">
       {{deuda}}
+      <button class="button" (click)="pagarDeuda()">Pagar deuda</button>
     </div>
   </div>
-</div> -->
+</div>
 
 <div *ngIf="bibliotecaVacia" class="classDiv">
   <div *ngIf = "!isAdmin" class="box-empty">
