style: arregle el estilo de las peliculas en el menu de inicio para el admin

--- a/Films/src/app/components/inicio-aux/inicio-aux.component.html
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.html
@@ -3,8 +3,8 @@
       <h4 class="title">CATALOGO PRINCIPAL</h4>
     </div>  
     <div *ngFor="let group of getMovieGroups(filteredFilms)" class="box-group-films">
-        <div *ngFor="let film of group" class="recuadroCelda film">  
-          <div *ngIf = "isLoggedIn && !isAdmin">
+        <div *ngFor="let film of group" class="recuadroCelda film" [ngClass]="{'no-favourite': isAdmin}">  
+          <div *ngIf = "!isAdmin">
             <div class="box-star">
               <button 
                 (click)="toggleFavourite(film)" 
