--- a/Films/src/app/components/movie-list-components/movie-list-components.component.css
+++ b/Films/src/app/components/movie-list-components/movie-list-components.component.css
@@ -180,3 +180,11 @@
 .recuadroCelda:hover .box-options {
     opacity: 1;
 }
+
+.no-favourite .box-img-title {
+    margin-top: 3.2rem; /* Ajusta el margen para centrar el contenido verticalmente */
+}
+
+.no-favourite .recuadroCelda{
+    height: 400px;
+}
