feat: vista de deuda de usuarios para admin. show-users.component, pago-deuda.component, auth.guard, app-routing

--- a/Films/src/app/components/show-users/show-users.component.html
+++ b/Films/src/app/components/show-users/show-users.component.html
@@ -17,6 +17,7 @@
                 <button class="button option" (click)="verBiblioteca(user.id)"> Ver Biblioteca </button>
                 <button class="button option" (click)="verPagosPendientes(user.id)"> Ver Pagos Pendientes </button>
                 <button class="button option" (click)="openDeleteUserAccountModal(user.firstName, user.lastName, user.id)">Dar de Baja</button>
+                <button class="button option" (click)="verDeuda(user.id)">Ver Deuda</button>
             </div>
         </div>
     </div>
