style: arregle el estilo del form login y register

--- a/Films/src/app/components/login/login.component.css
+++ b/Films/src/app/components/login/login.component.css
@@ -17,3 +17,7 @@
   .btn-link:hover {
     color: #0056b3; /* Color del ícono al pasar el mouse */
   }
+
+  .box-login{
+    margin-top: 2rem;
+  }
