--- a/Films/src/app/components/register/register.component.html
+++ b/Films/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center align-items-center min-vh-100">
+<div class="container d-flex justify-content-center align-items-center box-register">
   <div class="row justify-content-center">
     <div class="col-md-15"> <!-- Volvemos a la col-md-8 para conservar el tamaño de la card -->
       <div class="card">
