--- a/Films/src/app/components/login/login.component.html
+++ b/Films/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center align-items-center min-vh-100">
+<div class="container d-flex justify-content-center align-items-center box-login">
   <div class="row justify-content-center">
     <div class="col-md-15">
       <div class="card shadow-lg" style="border-radius: 1rem; width: 100%; padding: 20px;">
