--- a/Films/src/app/components/navbar/navbar.component.css
+++ b/Films/src/app/components/navbar/navbar.component.css
@@ -51,9 +51,9 @@ img{
     grid-template-areas: 
     "box-main-menu  box-search-bar   box-extras";
     padding-inline: 2rem;
-    padding-block: 1rem;
+    padding-block: 1.6rem;
     align-items: center;
-    border-bottom: 0.1rem solid black;
+    background-color: #141414 /* Fondo base */
 }
 
 .box-main-menu, .box-search-bar, .box-profile{
@@ -72,11 +72,13 @@ img{
 .img-main-menu{
     width: 85px;
     height: 80px;
+    border-radius: 1.5rem;
 }
 
 .box-search-bar{
     justify-content: center;
     grid-area: box-search-bar;
+    background-color: transparent;
 }
 
 .search-logo{
@@ -88,12 +90,13 @@ img{
     display: flex;
     border: 0%;
     align-items: center;
-    border-bottom: 0.11rem solid black;
+    border-bottom: 0.11rem solid aliceblue;
     padding-inline: 2.5rem;
     transition: border-bottom 0.3s ease, border-radius 0.3s ease; /* Añadido */
 }
 
 .search-bar{
+    background-color: transparent;
     margin-block: 0.2rem;
     font-size: 1.4rem;
     height: 3rem;
@@ -101,16 +104,16 @@ img{
     border: 0.1rem solid transparent;
     outline: 0.1rem solid transparent;
     margin-right: 1rem;
+    color: aliceblue;
 }
 
 .search-bar:focus{
-    border: black;
+    border: aliceblue;
     border-radius: 1rem;
 }
 
 .search-bar::placeholder{
-    color: black;
-    letter-spacing: 0.2rem;
+    color: aliceblue;
 }
 
 .active{
@@ -124,6 +127,7 @@ img{
     border-radius: 0rem; 
     background-color:transparent;
     transition: border 0.3s ease, border-radius 0.3s ease;
+    transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease;
     display: flex;
     justify-content: center;
     cursor: pointer;
@@ -134,20 +138,25 @@ img{
     margin: 0%;
 }
 
+.text-menu{
+    font-size: 2.2rem;
+}
+
 .button-main-menu{
+    font-family: 'League Gothic';
     border-radius: 0rem; 
     background-color:transparent;
-    transition: border 0.3s ease, border-radius 0.3s ease, box-shadow 0.3s ease;
-    display: flex;
+    display: grid;
     justify-content: center;
     cursor: pointer;
     outline: none; 
     transition: 0.5s;
+    color: aliceblue;
+    transition: box-shadow 0.3s ease-in-out
 }
 
 .button-main-menu:hover{
-    box-shadow: 1px 1px 2px 3px rgb(11, 11, 11);
-    background-color: transparent; 
+    color: rgb(187, 187, 187);
 }
 
 .button-main-menu:focus {
@@ -160,18 +169,18 @@ img{
 }
 
 .button-shopping-cart{
-    padding: 0.45rem;
+    padding: 0.2rem;
+}
+
+.button-shopping-cart:hover, 
+.button-profile:hover{
+    box-shadow: 0 0 6px rgba(255, 255, 255, 0.8);
+    background-color: #747474;
 }
 
 .img-shopping-cart{
     width: 47px;
     height: 47px;
-}
-
-.button-profile:hover,
-.button-shopping-cart:hover {
-    border-color: black; /* Cambia solo el color del borde */
-    border-radius: 1rem; 
 }
 
 .box-extras{
@@ -293,6 +302,21 @@ img{
     color: #777;
 }
 
+.icon {
+    color: aliceblue; /* Cambia el color aquí */
+    width: 55px;
+    height: 55px;
+}
+
+.path-icon:hover{
+    box-shadow: #ccc 1px 1px 1px 1px;
+}
+
+.shopping-cart-icon{
+    color: aliceblue; /* Cambia el color aquí */
+    width: 45px;
+    height: 45px;
+}
 
 
   
