style: modifique el estilo de las secciones donde se muestran peliculas

--- a/Films/src/app/components/footer/footer/footer.component.css
+++ b/Films/src/app/components/footer/footer/footer.component.css
@@ -2,7 +2,7 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    background-color: rgb(150, 150, 150);
+    background-color: #444444;
     padding-block: 0.5rem;
 }
 
