--- a/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.css
+++ b/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.css
@@ -9,12 +9,14 @@
     text-align: center;
     margin-bottom: 1.7rem;
     padding: 1rem;
-    background-color: #CFCCCC;
+    padding-block: 0.9rem;
+    background-color: #747474;
     width: 100%;
 }
 
 .title{
     margin: 0%;
+    color: aliceblue;
 }
 
 .box-films{
