--- a/Films/src/app/components/inicio-aux/inicio-aux.component.css
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.css
@@ -5,6 +5,7 @@
 .box-title{
     margin-bottom: 1.7rem;
     padding: 1rem;
+    padding-block: 0.9rem;
     background-color: #747474;
 }
 
@@ -37,15 +38,14 @@
 .recuadroCelda {
     position: relative;
     overflow: hidden;
-    width: 290px;
+    width: 300px;
     height: 555px;
     background-color: black !important;
-    color: white !important;
+    color: aliceblue !important;
     border-radius: 10px !important;
     margin: 8px;
     padding: 0.2rem;
     transition: 0.5s;
-    border: 1px solid #6d6d6d;
 }
 
 .recuadroCelda:hover{
@@ -96,7 +96,7 @@
 
 .image{
     height: 350px;
-    width: 215px;
+    width: 235px;
     margin-bottom: 1.8rem;
 }
 
